--- a/deployments/platformdeployment/Kubernetes/chart/yelb/templates/deployment.yaml
+++ b/deployments/platformdeployment/Kubernetes/chart/yelb/templates/deployment.yaml
@@ -1,9 +1,13 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ template "yelb.fullname" . }}-ui
 spec:
   replicas: {{ .Values.replicaCount }}
+  selector:
+    matchLabels: 
+      app: {{ template "yelb.fullname" . }}
+      tier: frontend
   template:
     metadata:
       labels:
@@ -14,19 +18,23 @@ spec:
     spec:
       containers:
       - name: yelb-ui
-        image:  nomisbeme/yelb-ui:0.6
+        image:  {{ .Values.image.yelb_ui.image }}
         ports:
         - containerPort: 80
         env:
         - name: "APP_SERVER_HOSTNAME"
           value: {{ template "yelb.fullname" . }}-appserver
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ template "yelb.fullname" . }}-cache
 spec:
   replicas: {{ .Values.replicaCount }}
+  selector:
+    matchLabels: 
+      app: {{ template "yelb.fullname" . }}
+      tier: cache
   template:
     metadata:
       labels:
@@ -37,16 +45,23 @@ spec:
     spec:
       containers:
       - name: redis-server
-        image: redis:4.0.2
+        image: harbor-repo.vmware.com/dockerhub-proxy-cache/bitnami/redis:4.0
         ports:
         - containerPort: 6379
+        env:
+        - name: ALLOW_EMPTY_PASSWORD
+          value: "yes"
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ template "yelb.fullname" . }}-db
 spec:
   replicas: {{ .Values.replicaCount }}
+  selector:
+    matchLabels: 
+      app: {{ template "yelb.fullname" . }}
+      tier: backenddb
   template:
     metadata:
       labels:
@@ -57,16 +72,20 @@ spec:
     spec:
       containers:
       - name: {{ template "yelb.fullname" . }}-db
-        image:  mreferre/yelb-db:0.5
+        image:  harbor-repo.vmware.com/dockerhub-proxy-cache/mreferre/yelb-db:0.5
         ports:
         - containerPort: 5432
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ template "yelb.fullname" . }}-appserver
 spec:
   replicas: {{ .Values.replicaCount }}
+  selector:
+    matchLabels: 
+      app: {{ template "yelb.fullname" . }}
+      tier: middletier
   template:
     metadata:
       labels:
@@ -77,7 +96,7 @@ spec:
     spec:
       containers:
       - name: {{ template "yelb.fullname" . }}-appserver
-        image:  mreferre/yelb-appserver:0.5
+        image:  harbor-repo.vmware.com/dockerhub-proxy-cache/mreferre/yelb-appserver:0.5
         ports:
         - containerPort: 4567
         env:
