--- a/deployments/platformdeployment/Kubernetes/yaml/yelb-k8s-ingress-alb.yaml
+++ b/deployments/platformdeployment/Kubernetes/yaml/yelb-k8s-ingress-alb.yaml
@@ -96,7 +96,7 @@ spec:
     spec:
       containers:
       - name: yelb-ui
-        image:  mreferre/yelb-ui:0.7
+        image:  harbor-1.haas-461.pez.vmware.com/yelb/yelb-ui:0.7
         ports:
         - containerPort: 80
 ---
